Shop page overflow fixed

--- a/src/app/shop/components/cart/cart.component.css
+++ b/src/app/shop/components/cart/cart.component.css
@@ -1,3 +1,21 @@
+#cart-container {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100vh;
+    opacity: 0;
+    z-index: -1;
+    background:#0406078b;
+    transition: opacity ease 0.3s, 
+                z-index ease 0.5s;
+}
+
+#cart-container.cart-active {
+    opacity: 1;
+    z-index: 6;
+}
+
 .cart-wrapper {
     position: absolute;
     top: 0;
